--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,16 @@
-FROM python:3.13.7-alpine3.21
+FROM mcr.microsoft.com/devcontainers/base:ubuntu
 
 WORKDIR /src/app
 
 # Install dependencies
-# RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && \
+    apt-get install -y apt-transport-https python3 python3-pip python3-venv curl git jq software-properties-common unzip wget whois bash ca-certificates
 
-ENTRYPOINT ["sleep", "infinity"]
+RUN update-ca-certificates
+
+# Cleanup.
+RUN apt-get autoremove -y && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+ENV PATH="$HOME/.local/bin:$PATH"
